@@ -14,6 +14,7 @@
 %   2015-02-18: updated info about when Anova.default() works. J. Fox
 %   2015-09-04: added Anova.coxme(). J. Fox
 %   2016-06-03: added SSP and SSPE arguments to print.summary.ANova.mlm(). J. Fox
+%   2016-06-25: provision to print univariate ANOVAs for a mlm. J. Fox
 %-------------------------------------------------------------------------------------
 
 \name{Anova}
@@ -33,6 +34,8 @@
 \alias{print.Anova.mlm}
 \alias{summary.Anova.mlm}
 \alias{print.summary.Anova.mlm}
+\alias{print.univaov}
+\alias{as.data.frame.univaov}
 \alias{Anova.coxph}
 \alias{Anova.svyglm}
 \alias{Anova.rlm}
@@ -88,11 +91,18 @@ Manova(mod, ...)
     
 \method{print}{Anova.mlm}(x, ...)
 
-\method{summary}{Anova.mlm}(object, test.statistic, univariate=TRUE, 
-    multivariate=TRUE, ...)
+\method{summary}{Anova.mlm}(object, test.statistic, univariate=object$repeated, 
+    multivariate=TRUE, p.adjust.method, ...)
     
 \method{print}{summary.Anova.mlm}(x, digits = getOption("digits"), 
     SSP=TRUE, SSPE=SSP, ... )
+    
+\method{print}{univaov}(x, digits = max(getOption("digits") - 2L, 3L), 
+                          style=c("wide", "long"), 
+                          by=c("response", "term"),
+                          ...)
+    
+\method{as.data.frame}{univaov}(x, row.names, optional, by=c("response", "term"), ...)
     
 \method{Anova}{coxph}(mod, type=c("II", "III", 2, 3), 
 	test.statistic=c("LR", "Wald"), ...)
@@ -180,8 +190,17 @@ Manova(mod, ...)
   	matrix for different terms must be mutually orthogonal.}
   \item{x, object}{object of class \code{"Anova.mlm"} to print or summarize.}
   \item{multivariate, univariate}{compute and print multivariate and univariate tests for a repeated-measures
-    ANOVA; the default is \code{TRUE} for both.}
+    ANOVA or multivariate linear model; the default is \code{TRUE} for both for repeated measures and \code{TRUE} 
+    for \code{multivariate} for a multivariate linear model.}
+  \item{p.adjust.method}{if given for a multivariate linear model when univariate tests are requested, the
+    univariate tests are corrected for simultaneous inference by term; if specified, should be one of the methods
+    recognized by \code{\link{p.adjust}} or \code{TRUE}, in which case the default (Holm) adjustment is used.}
   \item{digits}{minimum number of significant digits to print.}
+  \item{style}{for printing univariate tests if requested for a multivariate linear model; one of \code{"wide"}, 
+    the default, or \code{"long"}.}
+  \item{by}{if univariate tests are printed in \code{"long"} \code{style}, they can be ordered \code{by} 
+    \code{"response"}, the default, or by \code{"term"}.}
+  \item{row.names, optional}{not used.}
   \item{vcov.}{in the \code{default} method, an optional coefficient-covariance matrix or function
     to compute a covariance matrix, computed by default by applying the generic \code{vcov} function to the model object.
     A similar argument may be supplied to the \code{lm} method, and the default (\code{NULL}) is to ignore the argument;
@@ -228,6 +247,10 @@ Manova(mod, ...)
   can be specified directly via the \code{imatrix} argument.
   \code{Manova} is essentially a synonym for \code{Anova}
   for multivariate linear models.
+  
+  If univariate tests are requested for the \code{summary} of a multivariate linear model, the object returned
+  contains a \code{univaov} component of \code{"univaov"}; \code{print} and \code{as.data.frame} methods are
+  provided for the \code{"univaov"} class.
   
   For the default method to work, the model object must contain a standard
   \code{terms} element, and must respond to the \code{vcov}, \code{coef}, and \code{model.matrix} functions. 
@@ -287,6 +310,8 @@ summary(Anova(lm(cbind(Al, Fe, Mg, Ca, Na) ~ Site, data=Pottery)))
 soils.mod <- lm(cbind(pH,N,Dens,P,Ca,Mg,K,Na,Conduc) ~ Block + Contour*Depth, 
     data=Soils)
 Manova(soils.mod)
+summary(Anova(soils.mod), univariate=TRUE, multivariate=FALSE,
+    p.adjust.method=TRUE)
 
 ## a multivariate linear model for repeated-measures data
 ## See ?OBrienKaiser for a description of the data set used in this example.
