@@ -8,7 +8,9 @@ Changes to Version 2.1-3
   
   o deltaMethod() now reports confidence intervals.
   
-  o print.summary.Anova.mlm() has new SSP and SSPE arguments to determine whether the corresponding matrices are printed.
+  o print.summary.Anova.mlm() has new SSP and SSPE arguments to determine whether the corresponding matrices are printed (suggestion of Michael Friendly).
+  
+  o summary() and print() methods for Anova.mlm() can now report univariate ANOVAs (suggestion and some code by Michael Friendly).
 
 Changes to Version 2.1-2
 
